src/test/resources/invalid_tests/DuplicatedNames.cnna
architecture DuplicatedNames{
    def input Q(-oo:+oo)^{inputs=10} in
    def input Q(-oo:+oo)^{inputs=10} in
    def output Q(0:1)^{classes=2} out

    def fc(){
        FullyConnected(units=64) ->
        Tanh()
    }

    def fc(){
        FullyConnected(units=64) ->
        Tanh()
    }

    in ->
    fc() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}